test/resources/valid/ValidActionModifiesVars.flo
action GET_ALL_POSTS = network(url = '/posts', method = 'GET');

flow POSTS = {
    array posts = [];
    array pendingPosts = [];
    GET_ALL_POSTS >> posts, pendingPosts;
}